results/SVCOMP/specgen/log-SubString01-2024_03_03_14_30_32.txt
public class SubString01 {

    //@ ensures \result <==> tmp.equals("ganddroppingthem");
    //@ ensures !\result <==> !tmp.equals("ganddroppingthem");
    //@ ensures \result <==> tmp.equals("file");
    //@ ensures !\result <==> !tmp.equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
/home/max/Documents/JMLGPT/tmp/SubString01.java:3: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("ganddroppingthem");
                             ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:4: error: cannot find symbol
    //@ ensures !\result <==> !tmp.equals("ganddroppingthem");
                               ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:5: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("file");
                             ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:6: error: cannot find symbol
    //@ ensures !\result <==> !tmp.equals("file");
                               ^
  symbol:   variable tmp
  location: class SubString01
4 errors

public class SubString01 {

    //@ ensures \result <==> tmp.equals("ganddroppingthem");
    //@ ensures !\result <==> !tmp.equals("ganddroppingthem");
    //@ ensures \result <==> tmp.equals("file");
    //@ ensures !\result <==> !tmp.equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
/home/max/Documents/JMLGPT/tmp/SubString01.java:3: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("ganddroppingthem");
                             ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:4: error: cannot find symbol
    //@ ensures !\result <==> !tmp.equals("ganddroppingthem");
                               ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:5: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("file");
                             ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:6: error: cannot find symbol
    //@ ensures !\result <==> !tmp.equals("file");
                               ^
  symbol:   variable tmp
  location: class SubString01
4 errors

public class SubString01 {

    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem");
    //@ ensures \result <==> letters.substring(6, 10).equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
/home/max/Documents/JMLGPT/tmp/SubString01.java:3: error: cannot find symbol
    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem");
                             ^
  symbol:   variable letters
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:4: error: cannot find symbol
    //@ ensures \result <==> letters.substring(6, 10).equals("file");
                             ^
  symbol:   variable letters
  location: class SubString01
2 errors

public class SubString01 {

    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem");
    //@ ensures \result <==> letters.substring(6, 10).equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
/home/max/Documents/JMLGPT/tmp/SubString01.java:3: error: cannot find symbol
    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem");
                             ^
  symbol:   variable letters
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:4: error: cannot find symbol
    //@ ensures \result <==> letters.substring(6, 10).equals("file");
                             ^
  symbol:   variable letters
  location: class SubString01
2 errors

public class SubString01 {

    //@ requires true;
    //@ ensures \result <==> tmp.equals("ganddroppingthem");
    //@ ensures \result <==> tmp.equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
/home/max/Documents/JMLGPT/tmp/SubString01.java:4: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("ganddroppingthem");
                             ^
  symbol:   variable tmp
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:5: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("file");
                             ^
  symbol:   variable tmp
  location: class SubString01
2 errors

public class SubString01 {

    //@ requires true;
    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem");
    //@ ensures \result <==> letters.substring(6, 10).equals("file");
    public static boolean f() {
        String letters = "attachfilesbydragginganddroppingthem";

        String tmp = letters.substring(20);
        if (!tmp.equals("ganddroppingthem"))
            return false;

        tmp = letters.substring(6, 10);
        if (!tmp.equals("file"))
            return false;
        return true;
    }

}
/home/max/Documents/JMLGPT/tmp/SubString01.java:4: error: cannot find symbol
    //@ ensures \result <==> letters.substring(20).equals("ganddroppingthem");
                             ^
  symbol:   variable letters
  location: class SubString01
/home/max/Documents/JMLGPT/tmp/SubString01.java:5: error: cannot find symbol
    //@ ensures \result <==> letters.substring(6, 10).equals("file");
                             ^
  symbol:   variable letters
  location: class SubString01
2 errors

